# clautron

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json
.claude/agents/: agent-orchestrator.md  app-architect.md  product-task-manager.md  security-auditor.md  tauri-expert.md
docs/: PRD.md  architecture.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_file_changes.sql  003_workflows.sql  004_workflow_context.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/adapters/: agent_watcher.rs  claude_cli_runner.rs  config_store.rs  in_memory_session_repository.rs  mod.rs  sqlite_log_repository.rs  sqlite_workflow_repository.rs  tauri_event_emitter.rs
src-tauri/src/commands/: agent_commands.rs  config_commands.rs  log_commands.rs  mod.rs  quota_commands.rs  review_commands.rs  spec_commands.rs  workflow_commands.rs
src-tauri/src/domain/: error.rs  mod.rs  models.rs  ports.rs  session_manager.rs  stream_parser.rs
src-tauri/src/models/: agent.rs  message.rs  mod.rs  session.rs
src-tauri/src/services/: agent_manager.rs  agent_parser.rs  agent_watcher.rs  config_store.rs  git_service.rs  log_store.rs  mod.rs  process_manager.rs  quota_service.rs  spec_manager.rs  spec_parser.rs  spec_watcher.rs  stream_parser.rs  workflow_engine.rs
src/hooks/: useAgentEvents.ts  useQuotaEvents.ts  useSpecEvents.ts  useWorkflowEvents.ts
src/lib/: formatters.ts  logParser.ts  tauri.ts  types.ts
src/stores/: agentStore.ts  (+3 more)
(+37 files in other folders)
