[package]
name = "clautron"
version = "0.1.0"
description = "Clautron - Desktop app for orchestrating Claude Code agents"
edition = "2021"

[lib]
name = "clautron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
regex = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
dirs = "6"
notify = "7"
notify-debouncer-mini = "0.5"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
